--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  firebase_core: ^3.9.0
+  cloud_firestore: ^5.6.0
+  flutter_local_notifications: ^9.1.4
   image_picker: ^1.1.2
+  
 
 dev_dependencies:
   flutter_test:
